Open target=_blank links externally

With KHTML, even links with target=_blank were opened externally. With
QWebEngineView, intercept the window creation, capture the url being
loaded, then load it externally.

BUG: 445871
FIXED-IN: 3.4.3